--- a/Frames/navBar.css
+++ b/Frames/navBar.css
@@ -7,10 +7,6 @@
 }
 #nav-more-btn{
   display: none;
-  user-select: none;
-  outline: none;
-  outline-color: transparent;
-  -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
 }
 #main-nav-panel{
