--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   margin:0;
   padding:0;
   transition: 0.5s;
+  -webkit-tap-highlight-color: transparent;
 }
 body{
   background:#ffffff;
